--- a/_posts/2020-10-19-Post2020.markdown
+++ b/_posts/2020-10-19-Post2020.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "Esta fue una copia de un post de hace tiempo"
 date:   2017-07-30 00:06:34 -0400
 categories: jekyll update
 ---
